Bug 423268 - Huge memory leak
Summary: Huge memory leak
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.11
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-20 13:18 UTC by Komorebi
Modified: 2020-07-04 13:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Komorebi 2020-06-20 13:18:01 UTC
SUMMARY
Latte consumes more and more ram each time I navigate to dock settings or every time compositor gets restarted 


STEPS TO REPRODUCE
1. Navigate to dock settings
2. Settings window is appeared, latte consumes more ram
3. Close settings. Latte releases only ~half of ram consumed on 2nd step
4. Repeat 1-3

OBSERVED RESULT
The process uses more and more ram (up to 2Gb)

EXPECTED RESULT
Amount of RAM used by the process shouldn't increase

Similar problem is related to kwin restarts. I.e. ram is increased after kwin --replace or just running and closing Steam.

Operating System: KDE neon 5.19
KDE Plasma Version: 5.19.1
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Kernel Version: 5.3.0-59-generic
OS Type: 64-bit
Processors: 4 × Intel® Xeon® CPU E3-1225 V2 @ 3.20GHz
Memory: 23,4 GiB of RAM
Graphics Processor: Radeon RX550/550 Series
Comment 1 Michail Vourlakos 2020-06-20 14:18:41 UTC
interesting...
unfortunately I have no idea how to fix such thing...
Comment 2 Michail Vourlakos 2020-07-04 12:59:43 UTC
Git commit 91449e06f0a40f9d7108af35b55a778e735652a2 by Michail Vourlakos.
Committed on 04/07/2020 at 12:58.
Pushed by mvourlakos into branch 'master'.

remove option delete hidden config windows

--it is not needed any more because config windows
are now using a singleton design in order to be
created only one time.

M  +0    -8    app/settings/data/preferencesdata.cpp
M  +0    -2    app/settings/data/preferencesdata.h
M  +263  -273  app/settings/dialogs/settingsdialog.ui
M  +0    -8    app/settings/handlers/tabpreferenceshandler.cpp
M  +0    -18   app/settings/universalsettings.cpp
M  +0    -6    app/settings/universalsettings.h
M  +3    -21   app/view/settings/primaryconfigview.cpp
M  +0    -1    app/view/settings/primaryconfigview.h
M  +1    -33   app/view/view.cpp
M  +0    -3    app/view/view.h

https://invent.kde.org/plasma/latte-dock/commit/91449e06f0a40f9d7108af35b55a778e735652a2
Comment 3 Michail Vourlakos 2020-07-04 13:02:56 UTC
feel free to retest with latest git version a report back your findings.

the new design is using a single settings window for all views. It should improve this vastly...