remove option delete hidden config windows

--it is not needed any more because config windows
are now using a singleton design in order to be
created only one time.

BUG:423268