app/settings/data/preferencesdata.cpp
@@ -28,7 +28,6 @@ const bool Preferences::BADGE3DSTYLE;
 const bool Preferences::LAYOUTSINFORMATIONWINDOW;
 const bool Preferences::AUTOSTART;
 const bool Preferences::BORDERLESSMAXIMIZED;
-const bool Preferences::HIDDENCONFIGURATIONWINDOWSAREDELETED;
 const bool Preferences::METAPRESSFORAPPLAUNCHER;
 const bool Preferences::METAHOLDFORBADGES;
 const int Preferences::SCREENSDELAY;
@@ -44,7 +43,6 @@ Preferences::Preferences(Preferences &&o)
       layoutsInformationWindow(o.layoutsInformationWindow),
       autostart(o.autostart),
       borderlessMaximized(o.borderlessMaximized),
-      hiddenConfigurationWindowsAreDeleted(o.hiddenConfigurationWindowsAreDeleted),
       metaPressForAppLauncher(o.metaPressForAppLauncher),
       metaHoldForBadges(o.metaHoldForBadges),
       mouseSensitivity(o.mouseSensitivity),
@@ -58,7 +56,6 @@ Preferences::Preferences(const Preferences &o)
       layoutsInformationWindow(o.layoutsInformationWindow),
       autostart(o.autostart),
       borderlessMaximized(o.borderlessMaximized),
-      hiddenConfigurationWindowsAreDeleted(o.hiddenConfigurationWindowsAreDeleted),
       metaPressForAppLauncher(o.metaPressForAppLauncher),
       metaHoldForBadges(o.metaHoldForBadges),
       mouseSensitivity(o.mouseSensitivity),
@@ -73,7 +70,6 @@ Preferences &Preferences::operator=(const Preferences &rhs)
     layoutsInformationWindow = rhs.layoutsInformationWindow;
     autostart = rhs.autostart;
     borderlessMaximized = rhs.borderlessMaximized;
-    hiddenConfigurationWindowsAreDeleted = rhs.hiddenConfigurationWindowsAreDeleted;
     metaPressForAppLauncher = rhs.metaPressForAppLauncher;
     metaHoldForBadges = rhs.metaHoldForBadges;
     mouseSensitivity = rhs.mouseSensitivity;
@@ -89,7 +85,6 @@ Preferences &Preferences::operator=(Preferences &&rhs)
     layoutsInformationWindow = rhs.layoutsInformationWindow;
     autostart = rhs.autostart;
     borderlessMaximized = rhs.borderlessMaximized;
-    hiddenConfigurationWindowsAreDeleted = rhs.hiddenConfigurationWindowsAreDeleted;
     metaPressForAppLauncher = rhs.metaPressForAppLauncher;
     metaHoldForBadges = rhs.metaHoldForBadges;
     mouseSensitivity = rhs.mouseSensitivity;
@@ -105,7 +100,6 @@ bool Preferences::operator==(const Preferences &rhs) const
             && (layoutsInformationWindow == rhs.layoutsInformationWindow)
             && (autostart == rhs.autostart)
             && (borderlessMaximized == rhs.borderlessMaximized)
-            && (hiddenConfigurationWindowsAreDeleted == rhs.hiddenConfigurationWindowsAreDeleted)
             && (metaPressForAppLauncher == rhs.metaPressForAppLauncher)
             && (metaHoldForBadges == rhs.metaHoldForBadges)
             && (mouseSensitivity == rhs.mouseSensitivity)
@@ -124,7 +118,6 @@ bool Preferences::inDefaultValues() const
             && (layoutsInformationWindow == LAYOUTSINFORMATIONWINDOW)
             && (autostart == AUTOSTART)
             && (borderlessMaximized == BORDERLESSMAXIMIZED)
-            && (hiddenConfigurationWindowsAreDeleted == HIDDENCONFIGURATIONWINDOWSAREDELETED)
             && (metaPressForAppLauncher == METAPRESSFORAPPLAUNCHER)
             && (metaHoldForBadges == METAHOLDFORBADGES)
             && (mouseSensitivity == MOUSESENSITIVITY)
@@ -138,7 +131,6 @@ void Preferences::setToDefaults()
     layoutsInformationWindow = LAYOUTSINFORMATIONWINDOW;
     autostart = AUTOSTART;
     borderlessMaximized = BORDERLESSMAXIMIZED;
-    hiddenConfigurationWindowsAreDeleted = HIDDENCONFIGURATIONWINDOWSAREDELETED;
     metaPressForAppLauncher = METAPRESSFORAPPLAUNCHER;
     metaHoldForBadges = METAHOLDFORBADGES;
     mouseSensitivity = MOUSESENSITIVITY;
