app/settings/data/preferencesdata.h
@@ -35,7 +35,6 @@ public:
     static const bool LAYOUTSINFORMATIONWINDOW = true;
     static const bool AUTOSTART = true;
     static const bool BORDERLESSMAXIMIZED = false;
-    static const bool HIDDENCONFIGURATIONWINDOWSAREDELETED = true;
     static const bool METAPRESSFORAPPLAUNCHER = false;
     static const bool METAHOLDFORBADGES = true;
     static const int SCREENSDELAY = 2500;
@@ -51,7 +50,6 @@ public:
     bool layoutsInformationWindow{LAYOUTSINFORMATIONWINDOW};
     bool autostart{AUTOSTART};
     bool borderlessMaximized{BORDERLESSMAXIMIZED};
-    bool hiddenConfigurationWindowsAreDeleted{HIDDENCONFIGURATIONWINDOWSAREDELETED};
     bool metaPressForAppLauncher{METAPRESSFORAPPLAUNCHER};
     bool metaHoldForBadges{METAHOLDFORBADGES};
     int screensDelay{SCREENSDELAY};
