app/view/settings/primaryconfigview.cpp
@@ -205,7 +205,7 @@ void PrimaryConfigView::showSecondaryWindow()
     if (!m_secConfigView) {
         m_secConfigView = new SecondaryConfigView(m_latteView, this);
         m_secConfigView->init();
-    } else if (m_secConfigView && !m_latteView->hiddenConfigurationWindowsAreDeleted() && !m_secConfigView->isVisible()){
+    } else if (m_secConfigView && !m_secConfigView->isVisible()){
         m_secConfigView->show();
     }
 }
@@ -213,13 +213,7 @@ void PrimaryConfigView::showSecondaryWindow()
 void PrimaryConfigView::hideSecondaryWindow()
 {
     if (m_secConfigView) {
-        if (m_latteView->hiddenConfigurationWindowsAreDeleted()) {
-            auto secWindow = m_secConfigView;
-            m_secConfigView = nullptr;
-            secWindow->deleteLater();
-        } else {
-            m_secConfigView->hideConfigWindow();
-        }
+        m_secConfigView->hideConfigWindow();
 
         if (KWindowSystem::isPlatformX11() && m_latteView->effects()) {
             //! this is needed in order for subtracked mask of secondary window to
@@ -227,13 +221,6 @@ void PrimaryConfigView::hideSecondaryWindow()
             //! Under wayland this is not needed because masks do not break any visuals.
             m_latteView->effects()->updateMask();
         }
-    }
-}
-
-void PrimaryConfigView::onHiddenConfigurationWindowsAreDeletedChanged()
-{
-    if (m_latteView && m_latteView->hiddenConfigurationWindowsAreDeleted() && !isVisible()) {
-        deleteLater();
     }
 }
 
@@ -275,7 +262,6 @@ void PrimaryConfigView::initView(Latte::View *view)
     m_latteView = view;
 
     viewconnections << connect(this, &PrimaryConfigView::inAdvancedModeChanged, m_latteView, &Latte::View::inSettingsAdvancedModeChanged);
-    viewconnections << connect(m_latteView, &View::hiddenConfigurationWindowsAreDeletedChanged, this, &PrimaryConfigView::onHiddenConfigurationWindowsAreDeletedChanged);
     viewconnections << connect(m_latteView->visibility(), &VisibilityManager::modeChanged, this, &PrimaryConfigView::syncGeometry);
     viewconnections << connect(m_latteView->containment(), &Plasma::Containment::immutabilityChanged, this, &PrimaryConfigView::immutabilityChanged);
     viewconnections << connect(m_latteView, &Latte::View::normalThicknessChanged, [&]() {
@@ -566,11 +552,7 @@ void PrimaryConfigView::hideEvent(QHideEvent *ev)
         m_latteView->layout()->recreateView(m_latteView->containment());
     }
 
-    if (m_latteView->hiddenConfigurationWindowsAreDeleted()) {
-        deleteLater();
-    } else {
-        setVisible(false);
-    }
+    setVisible(false);
 }
 
 void PrimaryConfigView::focusOutEvent(QFocusEvent *ev)
