app/view/settings/primaryconfigview.h
@@ -135,7 +135,6 @@ protected:
 
 private slots:
     void immutabilityChanged(Plasma::Types::ImmutabilityType type);
-    void onHiddenConfigurationWindowsAreDeletedChanged();
     void updateAvailableScreenGeometry(View *origin = nullptr);
     void updateEnabledBorders();
     void updateShowInlineProperties();
